safari fix for stretched images, maybe?

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -119,7 +119,7 @@ body {
   display: flex;
   align-self: center;
   max-height: 100px;
-  width: fit-content;
+  max-width: 100%;
 }
 
 .equipo {
